--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pwa-ecom",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.2",
-    "woocommerce-api": "^1.4.2"
+    "request": "^2.87.0"
   }
 }
